--- a/heart-disease-prediction/end-to-end-heart-disease-classification.ipynb
+++ b/heart-disease-prediction/end-to-end-heart-disease-classification.ipynb
@@ -3960,9 +3960,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3047f06-1864-4e93-90a2-25606c02f7e0",
+   "metadata": {},
+   "source": [
+    "Now we've got a ROC curve, an AUC metric and a confusion matrix, let's get a classification report as well as cross-validated precision, recall and f1-score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "c5a510e9-0146-46e2-a65d-0490ad71ac4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.89      0.86      0.88        29\n",
+      "           1       0.88      0.91      0.89        32\n",
+      "\n",
+      "    accuracy                           0.89        61\n",
+      "   macro avg       0.89      0.88      0.88        61\n",
+      "weighted avg       0.89      0.89      0.89        61\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_preds))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3febaec0-e25a-4be5-961e-0a680ec24df1",
+   "id": "78d7e646-7a7c-43b5-8c31-7a340476d892",
    "metadata": {},
    "outputs": [],
    "source": []
