--- a/heart-disease-prediction/end-to-end-heart-disease-classification.ipynb
+++ b/heart-disease-prediction/end-to-end-heart-disease-classification.ipynb
@@ -41,7 +41,7 @@
     "**Create data dictionary**\n",
     "\n",
     "* age (Age of the patient in years)\n",
-    "* sex (Male/Female)\n",
+    "* sex (Male or Female)\n",
     "* cp chest pain type ([typical angina, atypical angina, non-anginal, asymptomatic])\n",
     "* trestbps resting blood pressure (resting blood pressure (in mm Hg on admission to the hospital))\n",
     "* chol (serum cholesterol in mg/dl)\n",
